--- a/src/components/rows/ContainerRow.astro
+++ b/src/components/rows/ContainerRow.astro
@@ -49,7 +49,11 @@ if (background_image) {
       }
     </div>
     <div
-      class:list={["invisible animate-delay-100", styles?.inner ?? "py-36"]}
+      class:list={[
+        "animate-delay-100",
+        styles?.inner ?? "py-36",
+        animation !== "none" && "invisible",
+      ]}
       data-animate={animation === "none"
         ? null
         : animation ?? "animate-fade-down"}
