--- a/src/components/sections/Text.astro
+++ b/src/components/sections/Text.astro
@@ -6,7 +6,7 @@ import * as marked from "marked";
 type Props = z.infer<typeof textSchema>;
 
 const { style, text_content } = Astro.props;
-const markdown = await marked.parseInline(text_content);
+const markdown = await marked.parse(text_content);
 ---
 
-<p class:list={[style]} set:html={markdown} />
+<div class:list={[style]} set:html={markdown} />
