--- a/src/components/forms/ContactForm.astro
+++ b/src/components/forms/ContactForm.astro
@@ -58,7 +58,7 @@ const inputFields = [
       />
       <label for={modal_id ? `agreed-${modal_id}` : "agreed"} class="text-white"
         >I’ve read and agreed to Linaro’s <a
-          href="/privacy-policy"
+          href="/legal#privacy"
           class="text-white">Privacy Policy</a
         ></label
       >
@@ -69,7 +69,7 @@ const inputFields = [
       >
 
       <button
-        type="submit"
+        type="button"
         class="linaro-gradient-button flex justify-start items-center gap-2 hidden"
         id="contact-submitting"
       >
@@ -115,60 +115,3 @@ const inputFields = [
     }
   </div>
 </div>
-
-<script>
-  // ["DOMContentLoaded", "astro:after-swap"].forEach((event) => {
-  //   document.addEventListener(event, addListeners);
-  // });
-
-  // function addListeners() {
-  //   const form = document.getElementById("contact-form") as HTMLFormElement;
-  //   form?.addEventListener("submit", (event) => onSubmit(event, form));
-  // }
-
-  // function onSubmit(e: SubmitEvent, form: HTMLFormElement) {
-  //   e.preventDefault();
-
-  //   const feedback = form.getElementById("contact-feedback");
-  //   const feedbackText = form.getElementById("contact-feedback-text");
-
-  //   const button = form.getElementById("contact-submit");
-  //   const loader = form.getElementById("contact-submitting");
-
-  //   if (!e.target) return;
-
-  //   const data = new FormData(e.target as HTMLFormElement);
-  //   const payload = {} as Record<string, any>;
-
-  //   data.forEach((value, key) => (payload[key] = value));
-
-  //   button?.classList.add("hidden");
-  //   loader?.classList.remove("hidden");
-
-  //   fetch(
-  //     "https://avqfk3gzg2.execute-api.us-east-1.amazonaws.com/prod/formSubmit",
-  //     {
-  //       method: "POST",
-  //       body: JSON.stringify(payload),
-  //       headers: {
-  //         "X-Api-Key": "ox9fSkYfRK16mxy5Gv6pM121H7iAubAQ6uzsDmoW",
-  //       },
-  //     }
-  //   )
-  //     .then((response) => response.json())
-  //     .then((result) => {
-  //       form.classList.add("hidden");
-  //       feedback!.classList.remove("hidden");
-  //       feedbackText!.innerText = result.message;
-  //     })
-  //     .catch(() => {
-  //       feedback!.classList.remove("hidden");
-  //       feedbackText!.innerText =
-  //         "There was an error during submission. Please try again later.";
-  //       button?.classList.remove("hidden");
-  //     })
-  //     .finally(() => {
-  //       loader?.classList.add("hidden");
-  //     });
-  // }
-</script>
