--- a/src/components/forms/MembershipForm.astro
+++ b/src/components/forms/MembershipForm.astro
@@ -19,7 +19,11 @@ const inputFields = [
 <div
   class="max-w-4xl border border-[#6B6B6B] rounded-2xl px-8 py-4 w-full mx-auto"
 >
-  <form class="flex flex-col items-start gap-8" id="contact-form">
+  <form
+    class="flex flex-col items-start gap-8"
+    id="contact-form"
+    data-contact-form={form_id}
+  >
     <p class="text-xl font-bold">{description}</p>
     <p class="text-xl font-bold">{text}</p>
     <MembershipCards
@@ -51,12 +55,21 @@ const inputFields = [
       required
       placeholder="How can Linaro help you?"
       class="text-black pl-2 h-12 w-full h-24"></textarea>
-    <label for="agreed" class="text-white"
-      ><input type="checkbox" name="agreed" class="mr-2" required />I’ve read
-      and agreed to Linaro’s <a href="/privacy-policy" class="text-white"
-        >Privacy Policy</a
-      ></label
-    >
+    <div>
+      <input
+        type="checkbox"
+        name="agreed"
+        id={"agreed"}
+        class="mr-2"
+        required
+      />
+      <label for={"agreed"} class="text-white"
+        >I’ve read and agreed to Linaro’s <a
+          href="/legal#privacy"
+          class="text-white">Privacy Policy</a
+        ></label
+      >
+    </div>
     <button type="submit" class="linaro-gradient-button" id="contact-submit"
       >Submit</button
     >
@@ -82,69 +95,7 @@ const inputFields = [
       Submitting</button
     >
   </form>
-  <p id="contact-feedback" class="text-white"></p>
+  <div id="contact-feedback" class="hidden">
+    <p id="contact-feedback-text" class="text-white"></p>
+  </div>
 </div>
-<script>
-  ["DOMContentLoaded", "astro:after-swap"].forEach((event) => {
-    document.addEventListener(event, addListeners);
-  });
-
-  function addListeners() {
-    const form = document.getElementById("contact-form") as HTMLFormElement;
-    form?.addEventListener("submit", (event) => onSubmit(event, form));
-  }
-
-  function onSubmit(e: SubmitEvent, form: HTMLFormElement) {
-    e.preventDefault();
-
-    const feedback = document.getElementById("contact-feedback");
-    const button = document.getElementById("contact-submit");
-    const loader = document.getElementById("contact-submitting");
-
-    if (!e.target) return;
-
-    const data = new FormData(e.target as HTMLFormElement);
-
-    const payload = [
-      "customfield_13155",
-      "customfield_13156",
-      "email",
-      "customfield_13368",
-      "customfield_13365",
-      "form_id",
-    ].reduce(
-      (obj, key) => ({
-        ...obj,
-        [key]: data.get(key),
-      }),
-      {}
-    );
-
-    button?.classList.add("hidden");
-    loader?.classList.remove("hidden");
-
-    fetch(
-      "https://avqfk3gzg2.execute-api.us-east-1.amazonaws.com/prod/formSubmit",
-      {
-        method: "POST",
-        body: JSON.stringify(payload),
-        headers: {
-          "X-Api-Key": "ox9fSkYfRK16mxy5Gv6pM121H7iAubAQ6uzsDmoW",
-        },
-      }
-    )
-      .then((response) => response.json())
-      .then((result) => {
-        form.classList.add("hidden");
-        feedback!.innerText = result.message;
-      })
-      .catch(() => {
-        feedback!.innerText =
-          "There was an error during submission. Please try again later.";
-        button?.classList.remove("hidden");
-      })
-      .finally(() => {
-        loader?.classList.add("hidden");
-      });
-  }
-</script>
