chiara feedback fixes

--- a/src/components/article/ArticleContent.astro
+++ b/src/components/article/ArticleContent.astro
@@ -19,7 +19,7 @@ const { Content, image } = Astro.props;
       effects={["grayscale"]}
     />
     <article
-      class="prose prose-invert prose-xl mx-auto max-w-full px-8 prose-a:text-blue-200 py-24"
+      class="prose prose-invert prose-xl mx-auto max-w-full px-8 prose-a:text-blue-200 py-24 marker:text-white"
     >
       <Content components={{ img: CloudinaryImg }} />
     </article>
