--- a/src/components/hero/Hero.astro
+++ b/src/components/hero/Hero.astro
@@ -30,8 +30,8 @@ const descriptionMarkdown = await marked.parse(description);
   class:list={[
     // style,
     `relative text-white  w-full max-w-screen overflow-hidden`,
-    styles?.image_size
-      ? styles.image_size
+    styles?.main_container
+      ? styles.main_container
       : "h-[calc(100vh)] min-h-[800px] max-h-[1200px]",
   ]}
 >
