--- a/src/components/rows/ContainerRow.astro
+++ b/src/components/rows/ContainerRow.astro
@@ -39,8 +39,8 @@ if (background_image) {
             {!no_border && <div class="fade-border" />}
             <h2
               class:list={[
-                "text-white relative whitespace-prewrap md:min-w-[25ch] my-0 mx-8 text-3xl lg:text-5xl prose-em:linaro-gradient-text prose-em:not-italic text-center",
-                styles?.title,
+                "text-white relative whitespace-prewrap  my-0 mx-8 text-3xl lg:text-5xl prose-em:linaro-gradient-text prose-em:not-italic text-center",
+                styles?.title ?? "md:min-w-[25ch]",
               ]}
               set:html={titleMarkdown}
             />
