--- a/src/components/sections/CardGrid.astro
+++ b/src/components/sections/CardGrid.astro
@@ -30,10 +30,7 @@ const { cards, styles } = Astro.props;
               class="no-underline inline-block mt-auto"
             >
               <div
-                class:list={[
-                  `linaro-gradient-button mt-auto`,
-                  styles?.button_style,
-                ]}
+                class:list={[`linaro-gradient-button mt-auto`, styles?.button]}
               >
                 {button.text}
               </div>
