--- a/src/components/sections/ImageCards.astro
+++ b/src/components/sections/ImageCards.astro
@@ -3,7 +3,7 @@ import type { imageCardsSchema } from "@/content/schemas/sections";
 import type { z } from "astro/zod";
 import CloudinaryImg from "../cloudinary/CloudinaryImg.astro";
 import { marked } from "marked";
-import { style } from "solid-js/web";
+
 type Props = z.infer<typeof imageCardsSchema>;
 const { cards, styles } = Astro.props;
 ---
@@ -13,7 +13,7 @@ const { cards, styles } = Astro.props;
     cards.map(async ({ image, title, text, button, style }) => {
       const content = text ? await marked.parse(text) : null;
       return (
-        <li class:list={[styles?.card]}>
+        <li class:list={[styles?.card, style]}>
           {image && (
             <CloudinaryImg
               src={image.src}
@@ -24,9 +24,7 @@ const { cards, styles } = Astro.props;
             />
           )}
           <h3 class:list={[styles?.card_title]}>{title}</h3>
-          {text && (
-            <div class:list={["text-xl z-20", style]} set:html={content} />
-          )}
+          {text && <div class:list={["text-xl z-20"]} set:html={content} />}
 
           {button && (
             <a
@@ -37,7 +35,7 @@ const { cards, styles } = Astro.props;
               <div
                 class:list={[
                   `linaro-gradient-button justify-self-start items-start `,
-                  styles?.button_style,
+                  styles?.button,
                 ]}
               >
                 {button.text}
