--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -75,6 +75,8 @@ if (related.length > 0) {
   relatedPosts = (
     await getCollection("blogs", ({ data, slug: thisSlug }) => {
       return (
+        (String(import.meta.env.IS_PREVIEW) === "true" ||
+          Date.now() > new Date(data.date).getTime()) &&
         thisSlug !== slug &&
         tags.some((tag) => data.tags.map((t) => t.slug).includes(tag.slug))
       );
