--- a/src/pages/events/index.astro
+++ b/src/pages/events/index.astro
@@ -25,7 +25,7 @@ const optimizedBackground = await getImage({
     class="hero-background-image container mx-auto px-2 sm:px-4 md:px-8 z-0"
   >
     <h1 class="text-5xl my-12 font-bold">Events</h1>
-    <EventSearch client:only="solid-js" />
+    <EventSearch client:only="solid-js" isSsr={import.meta.env.ssr} />
   </main>
 </BaseLayout>
 <style
