--- a/src/pages/events/index.astro
+++ b/src/pages/events/index.astro
@@ -14,6 +14,8 @@ const optimizedBackground = await getImage({
   format: "webp",
   inferSize: true,
 });
+
+const isSsr = import.meta.env.DEV || !import.meta.env.IS_PUBLIC;
 ---
 
 <BaseLayout title="Events" description="A list of blogs">
@@ -25,7 +27,10 @@ const optimizedBackground = await getImage({
     class="hero-background-image container mx-auto px-2 sm:px-4 md:px-8 z-0"
   >
     <h1 class="text-5xl my-12 font-bold">Events</h1>
-    <EventSearch client:only="solid-js" isSsr={import.meta.env.ssr} />
+    <EventSearch
+      client:only="solid-js"
+      isSsr={isSsr}
+    />
   </main>
 </BaseLayout>
 <style
