--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -29,8 +29,8 @@ const path = Astro.url.pathname;
         /></a
       >
       <p>Linaro Limited</p>
-      <p>Harston Mill / Harston</p>
-      <p class="mb-4">Cambridge / CB22 7GG</p>
+      <p>Harston Mill, Harston</p>
+      <p class="mb-4">Cambridgeshire, CB22 7GG, UK</p>
       <SocialIcons size={15} color="grey" styles="gap-6 justify-start" />
     </div>
     <ul class="gap-8 hidden lg:flex mb-8">
