--- a/src/components/sections/TeamMembers.astro
+++ b/src/components/sections/TeamMembers.astro
@@ -15,7 +15,7 @@ const people = await getEntries(members);
     <h2 class="text-4xl text-white mb-16 text-center">{title}</h2>
   )
 }
-<ul class="gap-2 justify-center flex flex-wrap">
+<ul class="gap-2 justify-center flex flex-wrap" style="align-items: stretch; display: flex; justify-content: stretch">
   {
     people.map((x) => {
       return (
