--- a/src/components/common/MemberCard.astro
+++ b/src/components/common/MemberCard.astro
@@ -1,6 +1,6 @@
 ---
 import CloudinaryImg from "../cloudinary/CloudinaryImg.astro";
-import MemberModal from "./MemberModal.astro"
+import MemberModal from "./MemberModal.astro";
 const { id, name, title, image, info } = Astro.props;
 ---
 
@@ -11,17 +11,18 @@ const { id, name, title, image, info } = Astro.props;
     }
 </style>
 
-<li
-    class="flex px-4 flex-col justify-between items-start rounded-2xl text-white bg-black aspect-square px-1 w-full max-w-[30ch]"
->
-    <CloudinaryImg
-        src={image}
-        alt={name}
-        width={800}
-        height={800}
-        class="w-full h-full max-w-full object-cover rounded-2xl grayscale not-prose member-image"
-    />
-    <h2 class="text-2xl not-prose margin-top:0">{name}</h2>
-    <p>{title}</p>
-    <MemberModal modal_id={id} description={info} />
-</li>
+    <li
+        class="flex px-4 flex-col items-start rounded-2xl text-white bg-black aspect-square px-1 w-full max-w-[30ch]"
+        style="height: 100%"
+    >
+        <CloudinaryImg
+            src={image}
+            alt={name}
+            width={800}
+            height={800}
+            class="w-full h-full max-w-full object-cover rounded-2xl grayscale not-prose member-image"
+        />
+        <h2 class="text-2xl not-prose margin-top:0">{name}</h2>
+        <p>{title}</p>
+        <MemberModal modal_id={id} description={info} />
+    </li>
