add: tracking script

--- a/src/components/head/BaseHead.astro
+++ b/src/components/head/BaseHead.astro
@@ -17,6 +17,9 @@ const social_image = "";
   <meta property="description" content={description} />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8" />
+
+   <script type="text/javascript" src="//script.crazyegg.com/pages/scripts/0118/5929.js" async="async"></script>
+   
   {typeof GA_ID != 'undefined' && GA_ID != "" ? (
     <Cookies />
     <GoogleAnalytics id={GA_ID} />
