add rss feed and link

--- a/src/components/common/SocialIcons.astro
+++ b/src/components/common/SocialIcons.astro
@@ -38,4 +38,6 @@ const borderColor = color ? `border-${color}` : `border-white`;
       )
     )
   }
+  <li><a href="/rss.xml" target="_blank" aria-label="RSS-feed"><Icon name="rss" size={size || 20}
+    class:list={[iconColor, "hover:text-linaro-yellow"]}></a></li>
 </ul>
